updating api key

--- a/prompting-principles.ipynb
+++ b/prompting-principles.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import openai\n",
     "\n",
-    "openai.api_key = \"sk-proj-YWUmIffDGWjpypx24q9uT3BlbkFJBoD5eOgXJGaQGfQKKvDT\""
+    "openai.api_key = \"\""
    ]
   },
   {
