--- a/prompting-guidelines.ipynb
+++ b/prompting-guidelines.ipynb
@@ -1,15 +1,34 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1> Guidelines for Prompting </h1>\n",
+    "\n",
+    "Here we are going to learn the basics tips and tatics to start prompting better.\n",
+    "\n",
+    "So, first of all, let's setup our environment <b>loading the API Key and relevant python libraries</b>."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import openai\n",
+    "# !pip install openai\n",
     "\n",
-    "openai.api_key = \"\""
+    "import openai\n",
+    "import os\n",
+    "\n",
+    "openai.api_key  = os.getenv('OPENAI_API_KEY')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -46,7 +65,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
